refactor(main): Рефактор основного пути исполнения запросов
